blocks/download/download.css
@font-face {
  font-family: 'Adobe Clean';
  src: url('https://noonahcloud.s3.eu-central-1.amazonaws.com/users/lEgQsEG89/hlEg-QOYw/fonts/AdobeClean-Black.woff2')
    format('woff2');
  font-weight: 900;
  font-style: normal;
}

/* Hide boilerplate header and footer on the download page */
body:has(.download-wrap) header,
body:has(.download-wrap) footer {
  display: none;
}

/* Break out of EDS section container to go full viewport width */
.download {
  margin: 0 calc(50% - 50vw);
  width: 100vw;
}

.download-wrap {
  font-family: 'Adobe Clean', sans-serif;
  font-weight: 900;
  color: #fff;
  background: url('https://noonahcloud.s3.eu-central-1.amazonaws.com/users/lEgQsEG89/hlEg-QOYw/assets/marketing-microsite/639166111874360722_page_back_image.jpg')
    no-repeat top center;
  background-size: cover;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding-bottom: 2rem;
}

.download-banner {
  width: 100%;
  margin-bottom: 1rem;
}

.download-banner-desk {
  display: none;
  width: 100%;
}

.download-banner-mobile {
  display: block;
  width: 100%;
}

@media (min-width: 768px) {
  .download-banner-desk { display: block; }
  .download-banner-mobile { display: none; }
}

.download-heading {
  font-size: 2rem;
  font-weight: 900;
  margin: 0 0 0.25rem;
  color: #fff;
}

.download-sub {
  margin: 0 0 1.5rem;
  font-size: 1rem;
  color: #fff;
}

.download-preview {
  width: 100%;
  padding: 0 1.5rem;
  margin-bottom: 1rem;
}

.download-preview img {
  display: block;
  width: 100%;
  height: auto;
}

.download-cta {
  font-size: 1rem;
  color: #fff;
  margin: 0 1.5rem 1rem;
}

.download-btn {
  display: inline-block;
  margin-top: 0.5rem;
}

.download-btn img {
  width: 200px;
  height: 50px;
  object-fit: contain;
}

.download-links {
  margin-top: 2rem;
  padding: 0 1.5rem;
}

.download-links-heading {
  font-size: 0.85rem;
  text-transform: uppercase;
  letter-spacing: 0.08em;
  opacity: 0.7;
  margin-bottom: 0.5rem;
}

.download-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.download-links ul li {
  margin-bottom: 0.4rem;
}

.download-links a {
  color: #fff;
  font-size: 0.9rem;
  font-weight: 400;
  text-decoration: underline;
  opacity: 0.85;
}

.download-links a:hover {
  opacity: 1;
}

.download-error {
  text-align: center;
  padding: 80px 24px;
  color: #fff;
}

